Fix portfolio images stretch on mobile

--- a/css/czonios-portfolio.css
+++ b/css/czonios-portfolio.css
@@ -356,8 +356,8 @@ i.scroll:hover {
   }
 
   .img-portfolio {
-    width: 24vw;
-    height: 18vh;
+    width: 120px;
+    height: 90px;
     
   }
 
